@@ -6,6 +6,7 @@ PostGIS 3.0.0
   - #4162, ST_DWithin documentation examples for storing geometry and
     radius in table (Darafei Praliaskouski, github user Boscop).
   - #4163, MVT: Fix resource leak when the first geometry is NULL (Raúl Marín)
+  - #4161, MVT: Drop geometries smaller than the resolution (Raúl Marín)
 
 PostGIS 2.5.0rc1
 2018/08/19
